# autozhuxian

./: .gitignore  README.md  wake.bat
cpp/: CMakeLists.txt  main.cpp
cpp/app/: CMakeLists.txt
cpp/app/66/: CMakeLists.txt  main.cpp
cpp/app/arena/: CMakeLists.txt  main.cpp
cpp/app/login/: CMakeLists.txt  macro.hpp  main.cpp  task.cpp  task.hpp
cpp/app/reward/: CMakeLists.txt  main.cpp
cpp/include/command/: command.hpp
cpp/include/control/: control.hpp
cpp/include/imagesearch/: match.hpp  screenshot.hpp
cpp/include/logger/: logger.hpp
cpp/include/macro/: assert.hpp  expect.hpp
cpp/include/task/: command.hpp  common.hpp  stateful.hpp  task.hpp
cpp/include/util/: common_task.hpp
cpp/include/window/: window.hpp
cpp/lib/: CMakeLists.txt
cpp/lib/command/: CMakeLists.txt  command.cpp
cpp/lib/control/: CMakeLists.txt  control.cpp
cpp/lib/imagesearch/: CMakeLists.txt  match.cpp  screenshot.cpp
cpp/lib/logger/: CMakeLists.txt
cpp/lib/macro/: CMakeLists.txt
cpp/lib/task/: CMakeLists.txt  command.cpp  common.cpp  stateful.cpp  task.cpp
cpp/lib/util/: CMakeLists.txt  common_task.cpp
cpp/lib/window/: CMakeLists.txt  window.cpp
cpp/test/: CMakeLists.txt
cpp/test/winapi/: CMakeLists.txt  window_api_test.cpp
cpp/test/window/: CMakeLists.txt  window_test.cpp
docs/: zero_initialize.md
scripts/: login.bat
